--- a/po/hu.po
+++ b/po/hu.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: paru  2.0.0\n"
 "Report-Msgid-Bugs-To: https://github.com/Morganamilo/paru\n"
 "POT-Creation-Date: 2024-09-18 23:38+0000\n"
-"PO-Revision-Date: 2024-10-13 15:26+0200\n"
+"PO-Revision-Date: 2024-11-09 12:40+0100\n"
 "Last-Translator: summoner <summoner@vivaldi.net>\n"
 "Language-Team: \n"
 "Language: hu\n"
@@ -496,7 +496,7 @@ msgstr "    --gpgflags  <flags>    Argumentumok átadása a gpg-nek"
 #: src/help.rs:55
 msgid "    --fm        <file>     File manager to use for PKGBUILD review"
 msgstr ""
-"    --fm        <file>     A PKGBUILD felülvizsgálatához használni kívánt "
+"    --fm        <file>     A PKGBUILD felülvizsgálatához használandó "
 "fájlkezelő"
 
 #: src/help.rs:56
@@ -572,8 +572,8 @@ msgid ""
 "    --[no]useask           Automatically resolve conflicts using pacman's "
 "ask flag"
 msgstr ""
-"    --[no]useask           Ütközések automatikus feloldása a pacman ask flag "
-"használatával"
+"    --[no]useask           Ütközések automatikus feloldása a „pacman's ask” "
+"jelölő használatával"
 
 #: src/help.rs:74
 msgid ""
@@ -704,7 +704,7 @@ msgstr "speciális kapcsolók megjelenítése:"
 
 #: src/help.rs:95
 msgid "    -c --complete         Used for completions"
-msgstr "    -c --complete         Kitöltésekhez használatos"
+msgstr "    -c --complete         Kitöltésekhez használandó"
 
 #: src/help.rs:96
 msgid "    -s --stats            Display system package statistics"
@@ -911,7 +911,7 @@ msgstr "--downloadonly nem használható az AUR csomagokhoz"
 
 #: src/install.rs:1089
 msgid "Remove make dependencies after install?"
-msgstr "Fordítási függőségek eltávolítása telepítés után?"
+msgstr "Fordítási függőségek eltávolítása a telepítés után?"
 
 #: src/install.rs:1100
 msgid "Proceed to review?"
@@ -1066,7 +1066,7 @@ msgstr " [mellőzött]"
 
 #: src/repo.rs:171
 msgid "failed to get current exe"
-msgstr "nem sikerült lekérni az jelenlegi végrehajtható fájlt"
+msgstr "nem sikerült lekérni a jelenlegi végrehajtható fájlt"
 
 #: src/repo.rs:218
 msgid "syncing local databases..."
@@ -1114,7 +1114,7 @@ msgstr "egyetlen csomag sem felel meg a keresésnek"
 
 #: src/search.rs:489
 msgid "Packages to install (eg: 1 2 3, 1-3):"
-msgstr "Telepíteni kívánt csomagok (pl.: 1 2 3, 1-3):"
+msgstr "Telepítendő csomagok (pl.: 1 2 3, 1-3):"
 
 #: src/search.rs:491
 msgid "Select packages (eg: 1 2 3, 1-3):"
@@ -1170,7 +1170,7 @@ msgstr "{pkg}: a csomagfrissítés figyelmen kívül hagyása ({old} => {new})"
 
 #: src/upgrade.rs:406
 msgid "Packages to exclude (eg: 1 2 3, 1-3):"
-msgstr "Kihagyni kívánt csomagok (pl.: 1 2 3, 1-3):"
+msgstr "Kihagyandó csomagok (pl.: 1 2 3, 1-3):"
 
 #: src/util.rs:120
 msgid "[Y/n]:"
@@ -1212,7 +1212,7 @@ msgid ""
 msgstr ""
 "\n"
 "\n"
-"Válassza ki, hogy melyiket szeretné megjelölni (alapértelmezett=all): "
+"Válassza ki, hogy melyiket szeretné megjelölni (alapértelmezett=összes): "
 
 #: src/lib.rs:210
 msgid "can not use chroot builds: devtools is not installed"
