Support --noconfirm on -Ci

--- a/man/paru.8
+++ b/man/paru.8
@@ -226,6 +226,9 @@ Show less information.
 .B \-i, \-\-install
 Install a package into the chroot.
 
+\fB--noconfirm\fR can also be specified and will be forwarded to pacman.
+
+
 .TP
 .B \-u, \-\-sysupgrade
 Upgrade the chroot.
