Add --print flag to -C

--- a/man/paru.8
+++ b/man/paru.8
@@ -228,10 +228,13 @@ Install a package into the chroot.
 
 \fB--noconfirm\fR can also be specified and will be forwarded to pacman.
 
-
 .TP
 .B \-u, \-\-sysupgrade
 Upgrade the chroot.
+
+.TP
+.B \-p, \-\-print
+Print path to currently configured chroot.
 
 .SH BUILD OPTIONS (APPLY TO \-B AND \-\-BUILD)
 .TP
