--- a/man/paru.8
+++ b/man/paru.8
@@ -195,6 +195,8 @@ Prints the PKGBUILD to the terminal instead of downloading it.
 .B \-c, \-\-comments
 Print the AUR comments from the PKGBUILD's AUR page.
 
+Pass twice to get all comments instead of the first page.
+
 .TP
 .B \-s, \-\-ssh
 Clone the AUR package using SSH (e.g.: a read-write remote).
