--- a/po/uk.po
+++ b/po/uk.po
@@ -1,7 +1,7 @@
 # SOME DESCRIPTIVE TITLE.
 # Copyright (C) YEAR THE paru'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the paru package.
-# Serhii Starovoitov <drommer.94@gmail.com>, 2025.
+# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
 #, fuzzy
 msgid ""
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: paru  2.0.3\n"
 "Report-Msgid-Bugs-To: https://github.com/Morganamilo/paru\n"
 "POT-Creation-Date: 2024-09-18 23:38+0000\n"
-"PO-Revision-Date: 2025-04-14 23:00+3000\n"
+"PO-Revision-Date: 2025-04-14 22:00+3000\n"
 "Last-Translator: Serhii Starovoitov <drommer.94@gmail.com>\n"
 "Language-Team: Ukrainian <uk@li.org>\n"
 "Language: uk\n"
@@ -32,7 +32,8 @@ msgstr "Каталог для клонування: {}"
 #: src/clean.rs:47
 msgid "\n"
 "Diff Directory: {}"
-msgstr "Каталог для відмінностей: {}"
+msgstr "\n"
+"Каталог для відмінностей: {}"
 
 #: src/clean.rs:49
 msgid "Do you want to remove all saved diffs?"
