fix: example command in man page
Signed-off-by: Prajwal S N <prajwalnadig21@gmail.com>

--- a/man/paru.8
+++ b/man/paru.8
@@ -754,7 +754,8 @@ Gets information about package \fIfoo\fR from the repos or the \fBAUR\fR.
 paru \-S \fIfoo\fR \-\-mflags "\-\-skipchecksums \-\-skippgpcheck"
 Installs \fIfoo\fR while skipping checksums and PGP checks.
 
-.TP paru \-B .
+.TP
+paru \-B .
 Build PKGBUILD in current directory.
 
 .TP
